cppcheck/cppcheck_code_output.txt
Checking code/src/Cannon.cpp ...
1/32 files checked 0% done
Checking code/src/Cavalry.cpp ...
2/32 files checked 0% done
Checking code/src/Game.cpp ...
3/32 files checked 0% done
Checking code/src/Hex.cpp ...
code/src/Hex.cpp:128:3: error: There is an unknown macro here somewhere. Configuration is required. If Q_UNUSED is a macro then please configure it. [unknownMacro]
  Q_UNUSED(option)
  ^
4/32 files checked 0% done
Checking code/src/HexBoard.cpp ...
5/32 files checked 0% done
Checking code/src/Infantry.cpp ...
6/32 files checked 0% done
Checking code/src/Map.cpp ...
7/32 files checked 0% done
Checking code/src/Player.cpp ...
8/32 files checked 0% done
Checking code/src/Shop.cpp ...
9/32 files checked 0% done
Checking code/src/State.cpp ...
10/32 files checked 0% done
Checking code/src/Tank.cpp ...
11/32 files checked 0% done
Checking code/src/TheArmy.cpp ...
12/32 files checked 0% done
Checking code/src/client.cpp ...
13/32 files checked 0% done
Checking code/src/exit.cpp ...
14/32 files checked 0% done
Checking code/src/field.cpp ...
15/32 files checked 0% done
Checking code/src/main.cpp ...
16/32 files checked 0% done
Checking code/src/main_game_window.cpp ...
17/32 files checked 0% done
Checking code/src/playerlost.cpp ...
18/32 files checked 0% done
Checking code/src/qrc_resources.cpp ...
Checking code/src/qrc_resources.cpp: QT_NAMESPACE...
19/32 files checked 99% done
Checking code/src/shopwindow.cpp ...
20/32 files checked 99% done
Checking code/src/welcome.cpp ...
21/32 files checked 99% done
Checking code/src/winner.cpp ...
22/32 files checked 99% done
Checking code/tests/main.cpp ...
23/32 files checked 99% done
Checking code/tests/tst_map.cpp ...
24/32 files checked 99% done
Checking code/tests/tst_testcannon.cpp ...
25/32 files checked 99% done
Checking code/tests/tst_testcavalry.cpp ...
26/32 files checked 99% done
Checking code/tests/tst_testfield.cpp ...
27/32 files checked 99% done
Checking code/tests/tst_testgame.cpp ...
28/32 files checked 99% done
Checking code/tests/tst_testinfantry.cpp ...
29/32 files checked 99% done
Checking code/tests/tst_testplayer.cpp ...
30/32 files checked 99% done
Checking code/tests/tst_testshop.cpp ...
31/32 files checked 99% done
Checking code/tests/tst_testtank.cpp ...
32/32 files checked 100% done